# fat-agent-skill

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md
plugins/fat-agent/: README.md  pyproject.toml
plugins/fat-agent/.claude-plugin/: plugin.json
plugins/fat-agent/commands/: fat-audit.md
plugins/fat-agent/evals/: evals.json
plugins/fat-agent/examples/: FAT_Dashboard.html  fat-budget.json  sample_scores.json  sites.json
plugins/fat-agent/references/: accessibility-guide.md  ci-cd-integration.md  ecommerce-checklist.md  local-seo-checklist.md  performance-budgets.md  semrush-integration.md  seo-checklist.md
plugins/fat-agent/scripts/: analyse-html.py  brandkit.py  bulk_audit.py  calculate-score.py  ci_gate.py  client_facing.py  content_engine.py  crawl.py  editorial_report.py  fat_agent_cli.py  ga4.py  generate-badge.py  generate-charts.py  generate-report.py  generate_html_dashboard.py  gsc.py  gsc_health.py  lighthouse.py  link_opportunities.py  pagespeed.py  profiles.py  punchlist.py  redirects.py  render_js.py  semrush.py  sitecrawl.py  sitewide.py  suggest_schema.py  test_fat_agent.py  track-history.py  visual_regression.py
plugins/fat-agent/templates/: dashboard.css  dashboard.html
plugins/fat-agent/tests/: test_accessibility_module.py  test_ai_search.py  test_analyse_html.py  test_bulk_audit.py  test_calculate_score.py  test_ci_gate.py  test_client_facing.py  test_content_depth.py  test_content_engine.py  test_content_quality.py  test_cookie_gdpr.py  test_crawl.py  test_crawlability.py  test_eeat.py  (+41 more)
(+60 files in other folders)
